feat: card titles

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             <div class="content-wrap"></div>
             <img src="" alt="" class="back-image-item">
             <div class="card-content">
-              <h3 class="card-title"></h3>
+              <h3 class="card-title">Sonnenblumenoel</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
                 repellat nihil modi!</p>
             </div>
           </li>
           <li class="list-item-2">
-            <div class="content-wrap"></div>
+            <div class="content-wrap">Knoblauch</div>
             <img src="" alt="" class="back-image-item">
             <div class="card-content">
               <h3 class="card-title"></h3>
@@ -57,7 +57,7 @@
             </div>
           </li>
           <li class="list-item-3">
-            <div class="content-wrap"></div>
+            <div class="content-wrap">Senf</div>
             <img src="" alt="" class="back-image-item">
             <div class="card-content">
               <h3 class="card-title"></h3>
@@ -66,7 +66,7 @@
             </div>
           </li>
           <li class="list-item-4">
-            <div class="content-wrap"></div>
+            <div class="content-wrap">Aceto Bianco</div>
             <img src="" alt="" class="back-image-item">
             <div class="card-content">
               <h3 class="card-title"></h3>
@@ -75,7 +75,7 @@
             </div>
           </li>
           <li class="list-item-5">
-            <div class="content-wrap"></div>
+            <div class="content-wrap">Soya</div>
             <img src="" alt="" class="back-image-item">
             <div class="card-content">
               <h3 class="card-title"></h3>
@@ -84,7 +84,7 @@
             </div>
           </li>
           <li class="list-item-6">
-            <div class="content-wrap"></div>
+            <div class="content-wrap">Die Geheime Zutat</div>
             <img src="" alt="" class="back-image-item">
             <div class="card-content">
               <h3 class="card-title"></h3>
