fix: correct title tag

--- a/index.html
+++ b/index.html
@@ -39,57 +39,63 @@
         <p class="p-section-b">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, porro.</p>
         <ul class="section-b-list">
           <li class="list-item-1">
-            <div class="content-wrap"></div>
-            <img src="images/marko-blazevic-313835-unsplash.jpg" alt="" class="back-image-item">
-            <div class="card-content">
-              <h3 class="card-title">Sonnenblumenoel</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
-                repellat nihil modi!</p>
+            <div class="content-wrap">
+              <img src="images/marko-blazevic-313835-unsplash.jpg" alt="" class="back-image-item">
+              <div class="card-content">
+                <h3 class="card-title">Sonnenblumenoel</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
+                  repellat nihil modi!</p>
+              </div>
             </div>
           </li>
           <li class="list-item-2">
-            <div class="content-wrap">Knoblauch</div>
-            <img src="images/nick-fewings-1056552-unsplash.jpg" alt="" class="back-image-item">
-            <div class="card-content">
-              <h3 class="card-title"></h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
-                repellat nihil modi!</p>
+            <div class="content-wrap">
+              <img src="images/nick-fewings-1056552-unsplash.jpg" alt="" class="back-image-item">
+              <div class="card-content">
+                <h3 class="card-title">Knoblauch</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
+                  repellat nihil modi!</p>
+              </div>
             </div>
           </li>
           <li class="list-item-3">
-            <div class="content-wrap">Senf</div>
-            <img src="images/toinane-1538706-unsplash.jpg" alt="" class="back-image-item">
-            <div class="card-content">
-              <h3 class="card-title"></h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
-                repellat nihil modi!</p>
+            <div class="content-wrap">
+              <img src="images/toinane-1538706-unsplash.jpg" alt="" class="back-image-item">
+              <div class="card-content">
+                <h3 class="card-title">Senf</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
+                  repellat nihil modi!</p>
+              </div>
             </div>
           </li>
           <li class="list-item-4">
-            <div class="content-wrap">Aceto Bianco</div>
-            <img src="images/jacek-dylag-780780-unsplash.jpg" alt="" class="back-image-item">
-            <div class="card-content">
-              <h3 class="card-title"></h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
-                repellat nihil modi!</p>
+            <div class="content-wrap">
+              <img src="images/jacek-dylag-780780-unsplash.jpg" alt="" class="back-image-item">
+              <div class="card-content">
+                <h3 class="card-title">Aceto Bianco</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
+                  repellat nihil modi!</p>
+              </div>
             </div>
           </li>
           <li class="list-item-5">
-            <div class="content-wrap">Soya</div>
-            <img src="images/michael-weibel-1557397-unsplash.jpg" alt="" class="back-image-item">
-            <div class="card-content">
-              <h3 class="card-title"></h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
-                repellat nihil modi!</p>
+            <div class="content-wrap">
+              <img src="images/michael-weibel-1557397-unsplash.jpg" alt="" class="back-image-item">
+              <div class="card-content">
+                <h3 class="card-title">Soya</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
+                  repellat nihil modi!</p>
+              </div>
             </div>
           </li>
           <li class="list-item-6">
-            <div class="content-wrap">Die Geheime Zutat</div>
-            <img src="images/kristina-flour-185592-unsplash.jpg" alt="" class="back-image-item">
-            <div class="card-content">
-              <h3 class="card-title"></h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
-                repellat nihil modi!</p>
+            <div class="content-wrap">
+              <img src="images/kristina-flour-185592-unsplash.jpg" alt="" class="back-image-item">
+              <div class="card-content">
+                <h3 class="card-title">Die Geheime Zutat</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt praesentium, accusantium voluptate
+                  repellat nihil modi!</p>
+              </div>
             </div>
           </li>
         </ul>
@@ -109,7 +115,7 @@
   </main>
   <footer id="footer" class="grid">
     <div>Sevinaise</div>
-    <div>A project by <a href="">sevspo</a></div> 
+    <div>A project by <a href="">sevspo</a></div>
   </footer>
 </body>
 
